--- a/backend/payments/templates/payments/customer_balance_list.html
+++ b/backend/payments/templates/payments/customer_balance_list.html
@@ -1,10 +1,11 @@
-{% extends "admin/base_site.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block title %}Customer Balances{% endblock %}
 
 {% block content %}
 <div class="customer-balance-list">
+    <form style="display:none;">{% csrf_token %}</form>
     <div class="header">
         <h1>Customer Balances</h1>
     </div>
