--- a/backend/payments/templates/payments/payment_form.html
+++ b/backend/payments/templates/payments/payment_form.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block title %}{% if payment %}Edit Payment{% else %}Create Payment{% endif %}{% endblock %}
